@@ -66,10 +66,8 @@ cox.zph <- function(fit, transform='km', terms=TRUE, singledf =FALSE,
         istrat <- as.integer(cget$strata) - 1L # number from 0 for C
     else istrat <- rep(0L, nrow(y))
 
-    varnames <- names(fit$coefficients)
-    nvar <- length(varnames)
-    # if terms==FALSE the singledf argument is moot, but FALSE leads to a
-    #  simpler path through the code
+    # if terms==FALSE the singledf argument is moot, but setting a value
+    #   leads to a simpler path through the code
     if (!terms) singledf <- FALSE 
     
     <<zph-setup>>
@@ -105,7 +103,7 @@ if (is.character(transform)) {
                      'km' = {
                          temp <- survfitKM(factor(rep(1L, nrow(y))),
                                            y, se.fit=FALSE)
-                         # A nuisance to do left cont KM
+                         # A nuisance to do left continuous KM
                          indx <- findInterval(times, temp$time, left.open=TRUE)
                          1.0 - c(1, temp$surv)[indx+1]
                      },
@@ -121,13 +119,13 @@ if (is.character(transform)) {
     # Now get the U, information, and residuals
     if (ny==2) {
         ord <- order(istrat, y[,1]) -1L
-        resid <- .Call(Czph1, gtime, y, cget$x, eta,
+        resid <- .Call(Czph1, gtime, y, X, eta,
                         cget$weights, istrat, fit$method=="efron", ord)
     }
     else {
         ord1 <- order(-istrat, -y[,1]) -1L   # reverse time for zph2
         ord  <- order(-istrat, -y[,2]) -1L
-        resid <- .Call(Czph2, gtime, y, cget$x, eta,
+        resid <- .Call(Czph2, gtime, y, X, eta,
                         cget$weights, istrat, fit$method=="efron", 
                         ord1, ord)
     }
@@ -160,8 +158,15 @@ random effect is included in the linear.predictors component of the
 fit.  This allows us to do score tests for the other terms while effectively
 holding the random effect fixed.
 
+If there are any NA coefficients these are redundant variables.  It's
+easiest to simply get rid of them at the start by fixing up X, varnames,
+asgn, and nvar.
 <<zph-setup>>=
 eta <- fit$linear.predictors
+X <- cget$x
+varnames <- names(fit$coefficients)
+nvar <- length(varnames)
+
 if (!terms) {
     # create a fake asgn that has one value per coefficient
     asgn <- as.list(1:nvar)
@@ -180,19 +185,27 @@ if (!is.list(asgn)) stop ("unexpected assign component")
 frail <- grepl("frailty(", names(asgn), fixed=TRUE)
 if (any(frail)) {
     dcol <- unlist(asgn[frail])    # remove these columns from X
-    cget$x <- cget$x[, -dcol, drop=FALSE]
+    X <- X[, -dcol, drop=FALSE]
     asgn <- asgn[!frail]
+    # frailties don't appear in the varnames, so no change there
 }
 nterm <- length(asgn)
 termname <- names(asgn)
 
 if (any(is.na(fit$coefficients))) {
-    # fix up assign so as to ignore missing coefs, this should be rare
-    mcoef <- which(is.na(fit$coefficients))
-    asgn <- lapply(asgn, function(i) i[!(i %in% mcoef)])
+    keep <- !is.na(fit$coefficients)
+    varnames <- varnames[keep]
+    X <- X[,keep]
+
+    # fix up assign 
+    new <- unname(unlist(asgn))[keep] # the ones to keep
+    asgn <- sapply(asgn, function(x) {
+        i <- match(x, new, nomatch=0)
+        i[i>0]})
     asgn <- asgn[sapply(asgn, length)>0]  # drop any that were lost
     termname <- names(asgn)
-    nterm <- length(asgn)   # asgn will be 1, 2,2,2, 3, etc
+    nterm <- length(asgn)   # asgn will be a list
+    nvar <- length(new)
 }
 @ 
 
@@ -206,7 +219,10 @@ For the second derivative, the current penalties (frailty, rigde, pspline) have
 a second derivative penalty that is independent of beta-hat.  
 The coxph result contains the numeric value of the penalty at the solution,
 and we use a score test that would penalize the new time*pspline() term in
-the same way as the pspline term was penalized.  
+the same way as the pspline term was penalized.
+
+If no coefficients were missing then allvar will be 1:n, otherwise it
+will have holes.  
 
 <<zph-terms>>=                   
 test <- double(nterm+1)
